# lord

./: Cargo.toml  README.md  build.rs
proto/: lord.proto
sid/: iana-hardware@2018-03-13.sid  ietf-interfaces@2018-02-20.sid  ietf-ip@2018-02-22.sid
src/: ccc.rs  client.rs  main.rs  minion.rs  server.rs
src/coreconf/: cbor.rs  mod.rs  sid.rs  sidfile.rs  sidmap.rs
src/grpc/: mod.rs
