[package]
name = "lord"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
coap = "0.12"
coap-lite = "0.9.1"
serde = { version = "1.0.145", features = ["derive"] }
serde_cbor = "0.11.2"
tokio = { version = "1", features = ["full"] }

tonic = "0.8"
prost = "0.11"

[build-dependencies]
tonic-build = "0.8"
