[package]
name = "lord"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
coap = { version = "0.12", path = "/home/kaspar/src/coap-rs" }
coap-lite = "0.9.1"
serde = { version = "1.0.145", features = ["derive"] }
serde_cbor = "0.11.2"
tokio = { version = "1", features = ["full"] }

tonic = "0.8"
prost = "0.11"
base64 = "0.13.0"
yang-rs = "0.1.1"
serde_json = "1.0.86"
thiserror = "1.0.37"
anyhow = "1.0.65"
smol_str = { version = "0.1.23", features = ["serde"] }
indexmap = { version = "1.9.1", features = ["serde"] }

[[bin]]
name = "lordd"
path = "src/server.rs"

[[bin]]
name = "lordcli"
path = "src/client.rs"

[[bin]]
name = "ccc"
path = "src/ccc.rs"

[build-dependencies]
tonic-build = "0.8"
